--- a/app/src/main/res/layout/activity_add_list.xml
+++ b/app/src/main/res/layout/activity_add_list.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.eduardomartinez.sdm_ilistpro.activities.AddListActivity">
+    tools:context="com.example.eduardomartinez.sdm_ilistpro.activities.NewListActivity">
 
     <LinearLayout
         android:layout_width="317dp"
