Arreglo de bugs y probado en movil

--- a/app/src/main/res/layout/activity_new_list.xml
+++ b/app/src/main/res/layout/activity_new_list.xml
@@ -51,6 +51,7 @@
         android:layout_marginRight="8dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
+        android:onClick="addProduct"
         android:text="Añadir producto"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
