--- a/app/src/main/res/layout/product_for_add_item.xml
+++ b/app/src/main/res/layout/product_for_add_item.xml
@@ -53,6 +53,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_weight="1"
+        android:onClick="addProductItem"
         app:srcCompat="@android:drawable/ic_input_add" />
 
 </LinearLayout>
