--- a/app/src/main/res/layout/activity_new_list.xml
+++ b/app/src/main/res/layout/activity_new_list.xml
@@ -26,20 +26,19 @@
 
         <TextView
             android:id="@+id/textViewPrecioLista"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_weight="2.5"
             android:text="Precio"
             android:textSize="16sp" />
 
-        <EditText
-            android:id="@+id/textPrecioLista"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+        <TextView
+            android:id="@+id/textViewValorPrecioLista"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
             android:layout_weight="1"
-            android:ems="10"
-            android:inputType="textPersonName"
-            android:textSize="16sp" />
+            android:text="" />
+
     </LinearLayout>
 
     <Button
@@ -90,6 +89,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
+            android:editable="true"
             android:ems="10"
             android:inputType="textPersonName"
             android:textSize="16sp" />
