--- a/app/src/main/res/layout/product_added_item.xml
+++ b/app/src/main/res/layout/product_added_item.xml
@@ -33,4 +33,18 @@
             android:layout_weight="1"
             android:text="TextView" />
     </LinearLayout>
+
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_weight="2">
+
+        <CheckBox
+            android:id="@+id/checkBoxProducto"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerInParent="true"
+            android:onClick="comprarProducto" />
+    </RelativeLayout>
+
 </LinearLayout>
