--- a/app/src/main/res/layout/activity_saved_list.xml
+++ b/app/src/main/res/layout/activity_saved_list.xml
@@ -23,9 +23,19 @@
             android:id="@+id/searchProductSaved"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_weight="10"
+            android:layout_weight="9.5"
             android:layout_marginTop="5px"
-            android:layout_marginBottom="10px"/>
+            android:layout_marginBottom="10px">
+
+        </SearchView>
+
+        <Switch
+            android:id="@+id/switchVerCompletados"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_weight="10"
+            android:layout_marginLeft="12dp"
+            android:text="Productos completados" />
 
         <ListView
             android:id="@+id/listViewProductSaved"
