--- a/app/src/main/res/menu/menu_add_product_tabbed.xml
+++ b/app/src/main/res/menu/menu_add_product_tabbed.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     tools:context="com.example.eduardomartinez.sdm_ilistpro.activities.AddProductTabbedActivity">
     <item
-        android:id="@+id/action_settings"
+        android:id="@+id/action_back"
         android:icon="?attr/actionModeCloseDrawable"
         android:orderInCategory="100"
         android:title="@string/action_settings"
