--- a/app/src/main/res/layout/product_added_in_newlist_item.xml
+++ b/app/src/main/res/layout/product_added_in_newlist_item.xml
@@ -48,6 +48,20 @@
 
     </LinearLayout>
 
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_weight="1.3">
+
+        <EditText
+            android:id="@+id/editNumeroProductos"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerInParent="true"
+            android:ems="10"
+            android:inputType="number" />
+    </RelativeLayout>
+
     <ImageButton
         android:id="@+id/buttonDeleteProduct"
         android:layout_width="match_parent"
