--- a/app/src/main/res/layout/activity_settings_list.xml
+++ b/app/src/main/res/layout/activity_settings_list.xml
@@ -6,4 +6,18 @@
     android:layout_height="match_parent"
     tools:context="com.example.eduardomartinez.sdm_ilistpro.activities.SettingsListActivity">
 
+    <Button
+        android:id="@+id/button2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        android:onClick="localizame"
+        android:text="Button"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 </android.support.constraint.ConstraintLayout>
