--- a/app/src/main/res/layout/lista_compra_item.xml
+++ b/app/src/main/res/layout/lista_compra_item.xml
@@ -10,7 +10,7 @@
         android:id="@+id/imageViewListaCompraItem"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_weight="2"
+        android:layout_weight="1.5"
         app:srcCompat="@mipmap/ic_launcher" />
 
     <LinearLayout
@@ -33,4 +33,12 @@
             android:layout_weight="1"
             android:text="TextView" />
     </LinearLayout>
+
+    <ImageButton
+        android:id="@+id/buttonDeleteList"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_weight="1.3"
+        android:onClick="deleteListItem"
+        app:srcCompat="@android:drawable/ic_delete" />
 </LinearLayout>
