--- a/app/src/main/res/layout/activity_settings_list.xml
+++ b/app/src/main/res/layout/activity_settings_list.xml
@@ -10,25 +10,19 @@
     tools:context="com.example.eduardomartinez.sdm_ilistpro.activities.SettingsListActivity">
 
     <LinearLayout
-        android:layout_width="368dp"
-        android:layout_height="495dp"
-        android:layout_marginBottom="8dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginRight="5dp"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
         android:layout_weight="1"
         android:orientation="vertical"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
+        android:layout_marginLeft="8dp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        android:layout_marginRight="8dp"
+        app:layout_constraintRight_toRightOf="parent"
+        android:layout_marginTop="8dp">
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_marginLeft="10dp"
-            android:layout_marginRight="10dp"
             android:layout_weight="1"
             android:orientation="horizontal">
 
@@ -47,8 +41,6 @@
             android:id="@+id/textViewNuevaLocalizacion"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_marginLeft="10dp"
-            android:layout_marginRight="10dp"
             android:layout_weight="1"
             android:text="NuevaLocalizacion" />
 
@@ -56,8 +48,6 @@
             android:id="@+id/editTextNuevaLocalizacion"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_marginLeft="10dp"
-            android:layout_marginRight="10dp"
             android:layout_weight="1"
             android:ems="10"
             android:inputType="textPersonName" />
@@ -66,8 +56,6 @@
             android:id="@+id/switchUnSupermercado"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_marginLeft="10dp"
-            android:layout_marginRight="25dp"
             android:layout_weight="1"
             android:text="Buscar en solo un supermercado" />
 
@@ -75,8 +63,6 @@
             android:id="@+id/spinnerSupermercado"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_marginLeft="10dp"
-            android:layout_marginRight="25dp"
             android:layout_marginBottom="5dp"
             android:layout_weight="1" />
 
