--- a/app/src/main/res/layout/lista_compra_item.xml
+++ b/app/src/main/res/layout/lista_compra_item.xml
@@ -17,7 +17,8 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_weight="1"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        android:layout_marginLeft="15dp">
 
         <TextView
             android:id="@+id/textViewNombreListaItem"
@@ -33,6 +34,14 @@
             android:layout_weight="1"
             android:text="TextView" />
     </LinearLayout>
+
+    <ImageButton
+        android:id="@+id/buttonVerList"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_weight="1.3"
+        android:onClick="verListItem"
+        app:srcCompat="@android:drawable/ic_dialog_info" />
 
     <ImageButton
         android:id="@+id/buttonDeleteList"
