--- a/app/src/main/res/layout/product_added_item.xml
+++ b/app/src/main/res/layout/product_added_item.xml
@@ -37,6 +37,20 @@
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:layout_weight="2.1">
+
+        <EditText
+            android:id="@+id/editNumeroProductosItemAdded"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerInParent="true"
+            android:ems="10"
+            android:inputType="number" />
+    </RelativeLayout>
+
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
         android:layout_weight="2">
 
         <CheckBox
