--- a/app/src/main/res/layout/lista_compra_item.xml
+++ b/app/src/main/res/layout/lista_compra_item.xml
@@ -11,7 +11,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_weight="1.5"
-        app:srcCompat="@mipmap/ic_launcher" />
+        app:srcCompat="?android:attr/actionModePasteDrawable" />
 
     <LinearLayout
         android:layout_width="match_parent"
