--- a/app/src/main/res/menu/menu_saved_list.xml
+++ b/app/src/main/res/menu/menu_saved_list.xml
@@ -10,4 +10,7 @@
     <item
         android:id="@+id/action_edit"
         android:title="Editar" />
+    <item
+        android:id="@+id/action_delete"
+        android:title="Eliminar" />
 </menu>
