--- a/app/src/main/res/layout/activity_settings_list.xml
+++ b/app/src/main/res/layout/activity_settings_list.xml
@@ -45,6 +45,7 @@
                     android:text="Latitud:" />
 
                 <TextView
+                    android:id="@+id/latitud"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:layout_weight="1"
@@ -68,6 +69,7 @@
                     android:text="Longitud:" />
 
                 <TextView
+                    android:id="@+id/longitud"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:layout_weight="1"
@@ -79,12 +81,12 @@
     </LinearLayout>
 
     <Switch
-        android:id="@+id/switch2"
+        android:id="@+id/switchPrecioMin"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_weight="1.5"
         android:layout_marginLeft="8dp"
         android:layout_marginRight="8dp"
+        android:layout_weight="1.5"
         android:text="Precio mínimo" />
 
     <LinearLayout
@@ -94,7 +96,7 @@
         android:orientation="horizontal">
 
         <SeekBar
-            android:id="@+id/seekBar"
+            android:id="@+id/seekBarPrecioMin"
             style="@style/Widget.AppCompat.SeekBar.Discrete"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
@@ -103,7 +105,7 @@
             android:progress="10" />
 
         <TextView
-            android:id="@+id/textView6"
+            android:id="@+id/textViewPrecioMin"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_weight="6"
@@ -111,12 +113,12 @@
     </LinearLayout>
 
     <Switch
-        android:id="@+id/switch1"
+        android:id="@+id/switchPrecioMax"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_weight="1.5"
         android:layout_marginLeft="8dp"
         android:layout_marginRight="8dp"
+        android:layout_weight="1.5"
         android:text="Precio máximo" />
 
     <LinearLayout
@@ -126,7 +128,7 @@
         android:orientation="horizontal">
 
         <SeekBar
-            android:id="@+id/precioMax"
+            android:id="@+id/seekBarPrecioMax"
             style="@style/Widget.AppCompat.SeekBar.Discrete"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
@@ -135,7 +137,7 @@
             android:progress="70" />
 
         <TextView
-            android:id="@+id/textView7"
+            android:id="@+id/textViewPrecioMax"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_weight="6"
