--- a/app/src/main/res/layout/activity_new_list.xml
+++ b/app/src/main/res/layout/activity_new_list.xml
@@ -96,19 +96,20 @@
     </LinearLayout>
 
     <ListView
+        android:id="@+id/listViewProductos"
         android:layout_width="335dp"
         android:layout_height="278dp"
-        android:layout_marginTop="8dp"
-        app:layout_constraintTop_toBottomOf="@+id/AddProductoButton"
-        app:layout_constraintBottom_toBottomOf="parent"
         android:layout_marginBottom="8dp"
         android:layout_marginLeft="8dp"
-        app:layout_constraintLeft_toLeftOf="parent"
         android:layout_marginRight="8dp"
+        android:layout_marginTop="8dp"
+        android:background="@android:color/white"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintHorizontal_bias="0.514"
+        app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintVertical_bias="0.0"
-        android:id="@+id/listViewProductos"
-        app:layout_constraintHorizontal_bias="0.514" />
+        app:layout_constraintTop_toBottomOf="@+id/AddProductoButton"
+        app:layout_constraintVertical_bias="0.0" />
 
     <Button
         android:id="@+id/guardarListaButton"
